--- a/institucional/blogs.php.html
+++ b/institucional/blogs.php.html
@@ -100,10 +100,7 @@ f
         			<div id="menu">
     			<ul>
 					<li><a href="index.php.html" class="btn_inicio"></a></li>
-                    
 					<li><a href="Javascript:void(0)" class="btn_01_on"></a></li>
-
-
 					<li><a href="demonstracao.php.html" class="btn_demo"></a></li>        
 					<li><a href="blogs.php.html" class="btn_02"></a></li>
 					<li><a href="aplicativos.php.html" class="aplicativos"></a></li>
@@ -146,7 +143,7 @@ f
 				<span class="img_blogs">
 					<ul class="lista_blogs">
 						<li>
-							<a href="http://www.blogescolaolodum.com.br/?page_id=3">
+							<a href="http://blogescolaolodum.com.br/">
 								<img src="imagens/blog_escola_olodum.png" alt="Blog Esocloa Olodum" />
 								<p>Escola OLODUM - BA</p>
 							</a>
