--- a/institucional/blogs.php.html
+++ b/institucional/blogs.php.html
@@ -167,7 +167,7 @@ f
 							</a>
 						</li>
 						<li>
-							<a href="http://logitec-pi.wilivro.com.br/">
+							<a href="http://logicaseducpi.com.br/">
 								<img src="imagens/blog_logitecpi.png" alt="Blog Logitec" />
 								<p>Logitec - PI</p>
 							</a>
