--- a/institucional/blogs.php.html
+++ b/institucional/blogs.php.html
@@ -224,38 +224,38 @@ f
 				<span class="img_blogs">				  
 				  <ul class="lista_blogs">
 						<li>
-							<a href="../interacao/jeppe08/index.html@page_id=3.html">
-								<img src="imagens/blog_jeppe.png" alt="Blog Olodum" />
+							<a href="http://jeppe08.wilivro.com.br/">
+								<img src="imagens/blog_jeppe.png" alt="JEP PE 2008" />
 								<p>JEPPE - PE</p>
 							</a>
 						</li>
 						<li>
 							<a href="../interacao/bemreceber/index.html@page_id=2.html">
-								<img src="imagens/blog_bem_receber.png" alt="Blog Olodum" />
+								<img src="imagens/blog_bem_receber.png" alt="Bem Receber" />
 								<p>Bem Receber - PE</p>
 							</a>
 						</li>
 						<li>
 							<a href="http://www.blogjeprn.com.br/?page_id=3">
-								<img src="imagens/blog_jeprn.png" alt="Blog Olodum" />
+								<img src="imagens/blog_jeprn.png" alt="JEP RN" />
 								<p>JEPRN - RN</p>
 							</a>
 						</li>
 						<li>
 							<a href="http://www.telecentros2009pe.com.br/?page_id=2">
-								<img src="imagens/blog_telecentro_pernambuco.png" alt="Blog Olodum" />
+								<img src="imagens/blog_telecentro_pernambuco.png" alt="Telecentros 2009" />
 								<p>Telecentros 2009 - PE</p>
 							</a>
 						</li>
 						<li>
 							<a href="http://www.blogrendamaisrn.com.br/?page_id=2">
-								<img src="imagens/blog_renda_mais.png" alt="Blog Olodum" />
+								<img src="imagens/blog_renda_mais.png" alt="Renda Mais RN" />
 								<p>Renda Mais - RN</p>
 							</a>
 						</li>
 						<li>
 							<a href="http://www.wilivro.com.br/interacao/juventudeempreendedoradigital">
-								<img src="imagens/blog_juventudeempreendedoradigital.png" alt="Blog Olodum" />
+								<img src="imagens/blog_juventudeempreendedoradigital.png" alt="Juventude Empreendedora" />
 								<p>Juventude Empreendedora Digital - PE</p>
 							</a>
 						</li>
