--- a/institucional/blogs.php.html
+++ b/institucional/blogs.php.html
@@ -230,7 +230,7 @@ f
 							</a>
 						</li>
 						<li>
-							<a href="../interacao/bemreceber/index.html@page_id=2.html">
+							<a href="http://bemreceber.wilivro.com.br/">
 								<img src="imagens/blog_bem_receber.png" alt="Bem Receber" />
 								<p>Bem Receber - PE</p>
 							</a>
