--- a/institucional/projetos.html
+++ b/institucional/projetos.html
@@ -106,13 +106,13 @@
 	<ul>
 		<li><a href="index.php.html" class="btn_inicio"></a></li>
 		<li><a href="Javascript:void(0)" class="btn_01_on"></a></li>
-		<li><a href="demonstracao.php.html" class="btn_demo"></a></li>        
-		<li><a href="blogs.php.html" class="btn_02"></a></li>
-		<li><a href="aplicativos.php.html" class="aplicativos"></a></li>
-		<li><a href="institucional_01.php.html" class="btn_03"></a></li>
-		<li><a href="projetos.php.html" class="btn_04"></a></li>
-		<li><a href="parcerias.php.html" class="btn_05"></a></li>
-		<li><a href="contatos.php.html" class="btn_06"></a></li>
+		<li><a href="demonstracao.html" class="btn_demo"></a></li>        
+		<li><a href="blogs.html" class="btn_02"></a></li>
+		<li><a href="aplicativos.html" class="aplicativos"></a></li>
+		<li><a href="institucional_01.html" class="btn_03"></a></li>
+		<li><a href="projetos.html" class="btn_04"></a></li>
+		<li><a href="parcerias.html" class="btn_05"></a></li>
+		<li><a href="contatos.html" class="btn_06"></a></li>
 	</ul>
 </div>
     	
