fixed more links

--- a/institucional/index.html
+++ b/institucional/index.html
@@ -29,128 +29,128 @@
                         <div id="logo">
 
 
-                                </div>
-                                <div id="txt01_header" style="display:none">
-                                    A TECNOLOGIA A SERVIÇO DA FORMAÇÃO PROFISSIONAL
-
-                                </div>
-
-
-                                <div id="area_aluno" style=""><a href="http://geralearning.geranegocio.com.br" target="_blank"><img src="imagens/ico_area_aluno.png" /></a></div>
-
-
-                                <!-- MENU TOP -->     
-
-                                <div id="menu">
-                                    <ul>
-                                        <li><a href="index.html" class="btn_inicio"></a></li>
-                                        <li><a href="Javascript:void(0)" class="btn_01_on"></a></li>
-                                        <li><a href="demonstracao.html" class="btn_demo"></a></li>        
-                                        <li><a href="blogs.html" class="btn_02"></a></li>
-                                        <li><a href="aplicativos.html" class="aplicativos"></a></li>
-                                        <li><a href="institucional_01.html" class="btn_03"></a></li>
-                                        <li><a href="projetos.html" class="btn_04"></a></li>
-                                        <li><a href="parcerias.html" class="btn_05"></a></li>
-                                        <li><a href="contatos.html" class="btn_06"></a></li>
-                                    </ul>
-                            </div>
                         </div>
-                            <!-- FOTO TOP -->
+                        <div id="txt01_header" style="display:none">
+                            A TECNOLOGIA A SERVIÇO DA FORMAÇÃO PROFISSIONAL
 
-                            <div id="foto_top">
-                                <div id="myAlternativeContent_foto" style="display:none !important;">
-                                    <script type="text/javascript">
-                                        /*var flashvars = {};
-                                          var params = {};
-                                          params.quality = "best";
-                                          params.scale = "noscale";
-                                          params.wmode = "transparent";
-                                          var attributes = {};
-                                          swfobject.embedSWF("flash/foto_top.swf", "myAlternativeContent_foto", "185", "162", "8", false, flashvars, params, attributes);*/
-
-                                    </script>
-                                </div>
-                            </div>
                         </div>
-                        <!-- CONTEUDO HEADER -->
 
 
-                        <!-- CONTEUDO HOME -->
-
-                        <div id="cont_home">
-                            <div id="col_esq">
-                                <span class="tit_01">O que é o WiLivro?</span>
-                                <span class="area_txt_01">
-                                    Da parceria entre a Editora Ensinart e a empresa Geranegocio, especializada em desenvolvimento de softwares e cursos on-line, surgiu a Tecnologia WiLivro.
-                                    Na Tecnologia WiLivro, cabe à Geranegocio desenvolver os cursos e disponibilizar a plataforma de ensino a distância e à Editora Ensinart a produção dos livros didáticos e comercialização dos cursos on-line.
-                                    WiLivro associa o livro a um curso on-line, disponibilizando recursos tecnológicos que possibilitam a qualificação pela internet de forma individual (em casa, na empresa, no telecentro ou na lan house) 
-                                    ou de forma coletiva e presencial, através de programas e projetos, nos laboratórios das escolas e/ou telecentros.
-                                    A Tecnologia WiLivro (livro + licença do curso on-line) dá total flexibilidade ao treinando: pode-se adquirir conhecimento específico cursando apenas um módulo ou seguir o Itinerário Formativo, que é a realização 
-                                    sequencial de módulos. O Itinerário Formativo visa atingir um objetivo de qualificação voltado à formação profissional para o mercado de trabalho ou à montagem de um negócio próprio.
-                                </span>
-                                <br clear="all" />
-                                <div id="col_bottom">
-                                    <img src="imagens/logo_triad_bottom.png" />
-                                </div>
-                            </div>
-
-                            <div id="col_dir">
-                                <a href="demonstracao.php.html">
-                                    <div id="bloco1" class="blocos">
-                                        <div id="img_1" class="imgs"></div>         
-                                        <div class="textosP" id="texto1_1">Faça nossos</div>
-                                        <div class="textosG" id="texto1_2">CURSOS EXPRESS</div>
-                                        <div class="textosGB" id="texto1_3">GRATUITOS</div>
-                                    </div>
-                                </a>
-                                <a href="demonstracao.php.html#inclusao_digital">
-                                    <div id="bloco3" class="blocos">
-                                        <div id="img_3" class="imgs"></div>         
-                                        <div class="textosP" id="texto3_1">Veja as</div>
-                                        <div class="textosG" id="texto3_2">DEMONSTRAÇÕES</div>
-                                        <div class="textosGB" id="texto3_3">DOS CURSOS</div>
-                                    </div>
-                                </a>
-                                <a href="parcerias.php.html">
-                                    <div id="bloco4" class="blocos" style="border-bottom:none;">
-                                        <div id="img_4" class="imgs"></div>         
-                                        <div class="textosP" id="texto4_1">Seja uma</div>
-                                        <div class="textosG" id="texto4_2">INSTITUIÇÃO</div>
-                                        <div class="textosGB" id="texto4_3">PARCEIRA</div>
-                                    </div>
-                                </a>
+                        <div id="area_aluno" style=""><a href="http://geralearning.geranegocio.com.br" target="_blank"><img src="imagens/ico_area_aluno.png" /></a></div>
 
 
-                                <!-- Fim do bloco do botão 04 -->
+                        <!-- MENU TOP -->     
 
-                            </div>
-                            <br clear="all" />        
+                        <div id="menu">
+                            <ul>
+                                <li><a href="index.html" class="btn_inicio"></a></li>
+                                <li><a href="Javascript:void(0)" class="btn_01_on"></a></li>
+                                <li><a href="demonstracao.html" class="btn_demo"></a></li>        
+                                <li><a href="blogs.html" class="btn_02"></a></li>
+                                <li><a href="aplicativos.html" class="aplicativos"></a></li>
+                                <li><a href="institucional_01.html" class="btn_03"></a></li>
+                                <li><a href="projetos.html" class="btn_04"></a></li>
+                                <li><a href="parcerias.html" class="btn_05"></a></li>
+                                <li><a href="contatos.html" class="btn_06"></a></li>
+                            </ul>
                         </div>
-                        <!-- FIM DO CONTEUDO HOME -->
+                    </div>
+                    <!-- FOTO TOP -->
 
-                        <!-- Fim da div cont_principal -->
-                    </div> 
+                    <div id="foto_top">
+                        <div id="myAlternativeContent_foto" style="display:none !important;">
+                            <script type="text/javascript">
+                                /*var flashvars = {};
+                                  var params = {};
+                                  params.quality = "best";
+                                  params.scale = "noscale";
+                                  params.wmode = "transparent";
+                                  var attributes = {};
+                                  swfobject.embedSWF("flash/foto_top.swf", "myAlternativeContent_foto", "185", "162", "8", false, flashvars, params, attributes);*/
 
-                    <!-- Fim da div conteudo -->  
+                            </script>
+                        </div>
+                    </div>
+                </div>
+                <!-- CONTEUDO HEADER -->
 
 
+                <!-- CONTEUDO HOME -->
 
-                    <div id="conteudo_rdp">
-                        <div id="rdp">
-                            <img src="imagens/txt_rdp.jpg" />
+                <div id="cont_home">
+                    <div id="col_esq">
+                        <span class="tit_01">O que é o WiLivro?</span>
+                        <span class="area_txt_01">
+                            Da parceria entre a Editora Ensinart e a empresa Geranegocio, especializada em desenvolvimento de softwares e cursos on-line, surgiu a Tecnologia WiLivro.
+                            Na Tecnologia WiLivro, cabe à Geranegocio desenvolver os cursos e disponibilizar a plataforma de ensino a distância e à Editora Ensinart a produção dos livros didáticos e comercialização dos cursos on-line.
+                            WiLivro associa o livro a um curso on-line, disponibilizando recursos tecnológicos que possibilitam a qualificação pela internet de forma individual (em casa, na empresa, no telecentro ou na lan house) 
+                            ou de forma coletiva e presencial, através de programas e projetos, nos laboratórios das escolas e/ou telecentros.
+                            A Tecnologia WiLivro (livro + licença do curso on-line) dá total flexibilidade ao treinando: pode-se adquirir conhecimento específico cursando apenas um módulo ou seguir o Itinerário Formativo, que é a realização 
+                            sequencial de módulos. O Itinerário Formativo visa atingir um objetivo de qualificação voltado à formação profissional para o mercado de trabalho ou à montagem de um negócio próprio.
+                        </span>
+                        <br clear="all" />
+                        <div id="col_bottom">
+                            <img src="imagens/logo_triad_bottom.png" />
                         </div>
                     </div>
 
+                    <div id="col_dir">
+                        <a href="demonstracao.html">
+                            <div id="bloco1" class="blocos">
+                                <div id="img_1" class="imgs"></div>         
+                                <div class="textosP" id="texto1_1">Faça nossos</div>
+                                <div class="textosG" id="texto1_2">CURSOS EXPRESS</div>
+                                <div class="textosGB" id="texto1_3">GRATUITOS</div>
+                            </div>
+                        </a>
+                        <a href="demonstracao.html#inclusao_digital">
+                            <div id="bloco3" class="blocos">
+                                <div id="img_3" class="imgs"></div>         
+                                <div class="textosP" id="texto3_1">Veja as</div>
+                                <div class="textosG" id="texto3_2">DEMONSTRAÇÕES</div>
+                                <div class="textosGB" id="texto3_3">DOS CURSOS</div>
+                            </div>
+                        </a>
+                        <a href="parcerias.html">
+                            <div id="bloco4" class="blocos" style="border-bottom:none;">
+                                <div id="img_4" class="imgs"></div>         
+                                <div class="textosP" id="texto4_1">Seja uma</div>
+                                <div class="textosG" id="texto4_2">INSTITUIÇÃO</div>
+                                <div class="textosGB" id="texto4_3">PARCEIRA</div>
+                            </div>
+                        </a>
 
 
+                        <!-- Fim do bloco do botão 04 -->
 
-
+                    </div>
+                    <br clear="all" />        
                 </div>
-                <!-- Fim da main -->  
+                <!-- FIM DO CONTEUDO HOME -->
+
+                <!-- Fim da div cont_principal -->
+            </div> 
+
+            <!-- Fim da div conteudo -->  
+
+
+
+            <div id="conteudo_rdp">
+                <div id="rdp">
+                    <img src="imagens/txt_rdp.jpg" />
+                </div>
+            </div>
 
 
 
 
-            </body>
-        </html>
+
+        </div>
+        <!-- Fim da main -->  
+
+
+
+
+    </body>
+</html>
 
