--- a/institucional/projetos.html
+++ b/institucional/projetos.html
@@ -37,7 +37,7 @@
 
     <div id="menu">
       <ul>
-        <li><a href="index.php.html" class="btn_inicio"></a></li>
+        <li><a href="index.html" class="btn_inicio"></a></li>
         <li><a href="Javascript:void(0)" class="btn_01_on"></a></li>
         <li><a href="demonstracao.html" class="btn_demo"></a></li>
         <li><a href="blogs.html" class="btn_02"></a></li>
