--- a/institucional/demonstracao.php.html
+++ b/institucional/demonstracao.php.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=blogs.html" />
+  <meta http-equiv="refresh" content="0; url=demonstracao.html" />
   <title></title>
 </head>
 <body>
