--- a/institucional/blogs.html
+++ b/institucional/blogs.html
@@ -203,7 +203,7 @@ swfobject.embedSWF("flash/foto_top.swf", "myAlternativeContent_foto", "185", "16
             </a>
             </li>
             <li>
-            <a href="http://www.wilivro.com.br/interacao/juventudeempreendedoradigital">
+            <a href="http://wilivro.com.br/site-juventudeempreendedoradigital/">
               <img src="imagens/blog_juventudeempreendedoradigital.png" alt="Juventude Empreendedora" />
               <p>Juventude Empreendedora Digital - PE</p>
             </a>
