--- a/institucional/index.html
+++ b/institucional/index.html
@@ -80,18 +80,14 @@
                 <div id="cont_home">
                     <div id="col_esq">
                         <span class="tit_01">O que é o WiLivro?</span>
-                        <span class="area_txt_01">
-                            Da parceria entre a Editora Ensinart e a empresa Geranegocio, especializada em desenvolvimento de softwares e cursos on-line, surgiu a Tecnologia WiLivro.
-                            Na Tecnologia WiLivro, cabe à Geranegocio desenvolver os cursos e disponibilizar a plataforma de ensino a distância e à Editora Ensinart a produção dos livros didáticos e comercialização dos cursos on-line.
-                            WiLivro associa o livro a um curso on-line, disponibilizando recursos tecnológicos que possibilitam a qualificação pela internet de forma individual (em casa, na empresa, no telecentro ou na lan house) 
-                            ou de forma coletiva e presencial, através de programas e projetos, nos laboratórios das escolas e/ou telecentros.
-                            A Tecnologia WiLivro (livro + licença do curso on-line) dá total flexibilidade ao treinando: pode-se adquirir conhecimento específico cursando apenas um módulo ou seguir o Itinerário Formativo, que é a realização 
-                            sequencial de módulos. O Itinerário Formativo visa atingir um objetivo de qualificação voltado à formação profissional para o mercado de trabalho ou à montagem de um negócio próprio.
-                        </span>
-                        <br clear="all" />
-                        <div id="col_bottom">
-                            <img src="imagens/logo_triad_bottom.png" />
-                        </div>
+                        <p>
+                            A Wilivro é uma empresa voltada para um novo conceito de ensino que associa um livro a um curso on-line, disponibilizando recursos tecnológicos que possibilitam a qualificação pela internet de forma individual (em casa, na empresa, no telecentro ou na lan house) ou de forma coletiva e presencial, através de programas e projetos, nos laboratórios das escolas e/ou telecentros.
+                        </p>
+                        <p>
+                            Na Tecnologia Wilivro, cabe à empresa desenvolver os cursos e disponibilizar a plataforma de ensino a distância e às editoras parceiras, a produção dos livros didáticos.
+                        </p>
+                            A Tecnologia Wilivro (livro+ licença do curso on-line) dá total flexibilidade ao treinando: pode-se adquirir conhecimento específico cursando apenas um módulo ou seguir o Itinerário Formativo, que é a realização sequencial de módulos. O Itinerário Formativo visa atingir um objetivo de qualificação voltado à formação profissional para o mercado de trabalho ou à montagem de um negócio próprio.
+                        </p>
                     </div>
 
                     <div id="col_dir">
