--- a/institucional/index.html
+++ b/institucional/index.html
@@ -80,14 +80,15 @@
                 <div id="cont_home">
                     <div id="col_esq">
                         <span class="tit_01">O que é o WiLivro?</span>
-                        <p>
+                        <span class="area_txt_01">
                             A Wilivro é uma empresa voltada para um novo conceito de ensino que associa um livro a um curso on-line, disponibilizando recursos tecnológicos que possibilitam a qualificação pela internet de forma individual (em casa, na empresa, no telecentro ou na lan house) ou de forma coletiva e presencial, através de programas e projetos, nos laboratórios das escolas e/ou telecentros.
-                        </p>
-                        <p>
+                        </span>
+                        <span class="area_txt_01">
                             Na Tecnologia Wilivro, cabe à empresa desenvolver os cursos e disponibilizar a plataforma de ensino a distância e às editoras parceiras, a produção dos livros didáticos.
-                        </p>
+                        </span>
+                        <span class="area_txt_01">
                             A Tecnologia Wilivro (livro+ licença do curso on-line) dá total flexibilidade ao treinando: pode-se adquirir conhecimento específico cursando apenas um módulo ou seguir o Itinerário Formativo, que é a realização sequencial de módulos. O Itinerário Formativo visa atingir um objetivo de qualificação voltado à formação profissional para o mercado de trabalho ou à montagem de um negócio próprio.
-                        </p>
+                        </span>
                     </div>
 
                     <div id="col_dir">
