--- a/institucional/index.html
+++ b/institucional/index.html
@@ -36,7 +36,7 @@
                         </div>
 
 
-                        <div id="area_aluno" style=""><a href="http://geralearning.geranegocio.com.br" target="_blank"><img src="imagens/ico_area_aluno.png" /></a></div>
+                        <div id="area_aluno" style=""><a href="http://geralearning.wilivro.com.br" target="_blank"><img src="imagens/ico_area_aluno.png" /></a></div>
 
 
                         <!-- MENU TOP -->     
