--- a/institucional/blogs.html
+++ b/institucional/blogs.html
@@ -92,7 +92,7 @@ swfobject.embedSWF("flash/foto_top.swf", "myAlternativeContent_foto", "185", "16
     <span class="img_blogs">
       <ul class="lista_blogs">
         <li>
-        <a href="http://blogescolaolodum.com.br/">
+        <a href="http://blogescolaolodum.wilivro.com.br/">
           <img src="imagens/blog_escola_olodum.png" alt="Blog Esocloa Olodum" />
           <p>Escola OLODUM - BA</p>
         </a>
@@ -104,7 +104,7 @@ swfobject.embedSWF("flash/foto_top.swf", "myAlternativeContent_foto", "185", "16
         </a>
         </li>
         <li>
-        <a href="http://projetoesportecidadaniafac.com.br/">
+        <a href="http://projetoesportecidadaniafac.wilivro.com.br/">
           <img src="imagens/blog_projeto_esporte_cidadania.png" alt="Blog Projeto Esporte Cidadania" />
           <p>Projeto Esporte Cidadania FAC - DF</p>
         </a>
@@ -116,7 +116,7 @@ swfobject.embedSWF("flash/foto_top.swf", "myAlternativeContent_foto", "185", "16
         </a>
         </li>
         <li>
-        <a href="http://logicaseducpi.com.br/">
+        <a href="http://logicaseducpi.wilivro.com.br/">
           <img src="imagens/blog_logitecpi.png" alt="Blog Logitec" />
           <p>Logitec - PI</p>
         </a>
@@ -128,7 +128,7 @@ swfobject.embedSWF("flash/foto_top.swf", "myAlternativeContent_foto", "185", "16
         </a>
         </li>
         <li>
-        <a href="http://www.bloglanhouseal.com.br">
+        <a href="http://bloglanhouseal.wilivro.com.br">
           <img src="imagens/blog_Sebrae_Alagoas.png" alt="Blog Lan House" />
           <p>LanHouse Sebrae - AL</p>
         </a>
