Update and rename index_OFF.html to index.html
Atualizações no site wilivro

--- a/institucional/index.html
+++ b/institucional/index.html
@@ -48,9 +48,9 @@
                                 <li><a href="demonstracao.html" class="btn_demo"></a></li>        
                                 <li><a href="blogs.html" class="btn_02"></a></li>
                                 <li><a href="aplicativos.html" class="aplicativos"></a></li>
-                                <li><a href="institucional_01.html" class="btn_03"></a></li>
+                                <li><a href="institucional_01_off.html" class="btn_03"></a></li>
                                 <li><a href="projetos.html" class="btn_04"></a></li>
-                                <li><a href="parcerias.html" class="btn_05"></a></li>
+                                <li><a href="parcerias_off.html" class="btn_05"></a></li>
                                 <li><a href="contatos.html" class="btn_06"></a></li>
                             </ul>
                         </div>
