--- a/institucional/parcerias.html
+++ b/institucional/parcerias.html
@@ -90,7 +90,7 @@ swfobject.embedSWF("flash/foto_top.swf", "myAlternativeContent_foto", "185", "16
     <span class="sub_tit_parcerias">COMO FUNCIONAM AS PARCERIAS</span>
     <span class="area_txt_01_parcerias">
       Os programas e projetos, montados com Itinerários Formativos de 60 a 400 horas/aula, 
-      são comercializados através de instituições certificadas e credenciadas. A Ensinart disponibiliza 
+      são comercializados através de instituições certificadas e credenciadas. A Wilivro disponibiliza 
       a tecnologia, a plataforma de e-learning, os cursos on-line e o material didático e a instituição 
       parceira desenvolve as operações locais, como a implementação do projeto e a disponibilização de 
       monitores para os laboratórios de informática e telecentros.        
