--- a/new/index.html
+++ b/new/index.html
@@ -4,16 +4,20 @@
 <head>
   <meta charset="utf-8">
   <title>Wilivro</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="https://danilothiago.github.io/site-wilivro/">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300|Merriweather' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,700,800' rel='stylesheet' type='text/css'>
+  <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300|Merriweather" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,700,800" rel="stylesheet" type="text/css">
+  <link href="styles.6797316e86c4f246087a.bundle.css" rel="stylesheet" />
 </head>
 
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="scripts.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+  <script type="text/javascript" src="inline.d479251ea5f7315096ee.bundle.js"></script>
+  <script type="text/javascript" src="polyfills.ad37cd45a71cb38eee76.bundle.js"></script>
+  <script type="text/javascript" src="scripts.ef80deadb167f014cc50.bundle.js"></script>
+  <script type="text/javascript" src="main.1344bbb4b365d3a8aad4.bundle.js"></script>
+</body>
 
 </html>
