--- a/new/index.html
+++ b/new/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Wilivro</title>
-  <base href="https://www.wilivro.com.br/new/">
+  <base href="https://wilivro.github.io/new/">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300|Merriweather" rel="stylesheet" type="text/css">
