--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <META NAME="description" CONTENT="+ de 250 mil cursos ministrados via web. Curso para Concurso Portugu?+Matem?ica+L?ica por apenas R$49,35. Cursos Gratuitos com Certificado!">
 <META NAME="keywords" CONTENT="CURSO PARA CONCURSO, CURSOS GRATUITOS COM CERTIFICADO">
-<meta http-equiv="refresh" content="0; URL=https://wilivro.github.io/wilivro.github.io/new/" />
+<meta http-equiv="refresh" content="0; URL=institucional/index.html" />
 <script language="JavaScript" type="text/JavaScript">
 <!--
 function MM_goToURL() { //v3.0
