--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Wilivro</title>
-  <base href="http://wilivro.github.io/">
+  <base href="https://wilivro.github.io/">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300|Merriweather" rel="stylesheet" type="text/css">
