--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
   <title>Wilivro</title>
   <base href="https://wilivro.com.br/">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./favicon.ico">
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300|Merriweather" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,700,800" rel="stylesheet" type="text/css">
-  <link href="styles.bundle.css" rel="stylesheet" />
+  <link href="./styles.bundle.css" rel="stylesheet" />
 </head>
 
 <body>
   <app-root></app-root>
-  <script type="text/javascript" src="inline.bundle.js"></script>
-  <script type="text/javascript" src="polyfills.bundle.js"></script>
-  <script type="text/javascript" src="scripts.bundle.js"></script>
-  <script type="text/javascript" src="main.bundle.js"></script>
+  <script type="text/javascript" src="./inline.bundle.js"></script>
+  <script type="text/javascript" src="./polyfills.bundle.js"></script>
+  <script type="text/javascript" src="./scripts.bundle.js"></script>
+  <script type="text/javascript" src="./main.bundle.js"></script>
 </body>
 
 </html>
