--- a/index.html
+++ b/index.html
@@ -1,23 +1,1 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <title>Wilivro</title>
-  <base href="http://wilivro.com.br/">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300|Merriweather" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,700,800" rel="stylesheet" type="text/css">
-  <link href="styles.6797316e86c4f246087a.bundle.css" rel="stylesheet" />
-</head>
-
-<body>
-  <app-root></app-root>
-  <script type="text/javascript" src="inline.f9e6e056b7ac7ab62482.bundle.js"></script>
-  <script type="text/javascript" src="polyfills.ad37cd45a71cb38eee76.bundle.js"></script>
-  <script type="text/javascript" src="scripts.ef80deadb167f014cc50.bundle.js"></script>
-  <script type="text/javascript" src="main.249b160e0bc37717292c.bundle.js"></script>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Wilivro</title><base href="http://wilivro.com.br/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300|Merriweather" rel="stylesheet" type="text/css"><link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,700,800" rel="stylesheet" type="text/css"><link href="styles.6797316e86c4f246087a.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><script type="text/javascript" src="inline.b93ec5964c9eca6cff1d.bundle.js"></script><script type="text/javascript" src="polyfills.ad37cd45a71cb38eee76.bundle.js"></script><script type="text/javascript" src="scripts.ef80deadb167f014cc50.bundle.js"></script><script type="text/javascript" src="main.7740545aa15318a5c097.bundle.js"></script></body></html>
